--- a/package.json
+++ b/package.json
@@ -3,14 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "scripts/test.sh",
+    "console": "truffle console",
+    "coverage": "scripts/coverage.sh"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kryptopy1/crowdsale.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kryptopy1/crowdsale/issues"
+  },
+  "homepage": "https://github.com/kryptopy1/crowdsale",
   "dependencies": {
-    "truffle-contract": "^3.0.0",
     "zeppelin-solidity": "^1.2.0"
   },
   "devDependencies": {
-    "async": "^2.5.0",
-    "solidity-coverage": "^0.2.2"
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.23.0",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.0.0",
+    "chai-bignumber": "^2.0.0",
+    "coveralls": "^2.13.1",
+    "ethereumjs-util": "^5.1.2",
+    "ethereumjs-testrpc": "^4.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
+    "solidity-coverage": "^0.2.2",
+    "truffle": "^3.4.6",
+    "truffle-hdwallet-provider": "0.0.3"
   }
 }
